--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 VUE_APP_SITE_TITLE="Vue-Starter"
 VUE_APP_SITE_DESCRIPTION="Sample website for vue-cli 4"
 VUE_APP_HOST="http://localhost:8080/"
+
+VUE_APP_QIITA_API_HOST="https://qiita.com"
+VUE_APP_QIITA_API_ENDPOINT="/api/v2"
