--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "VUE_APP_GIT_COMMIT_HASH=$(git rev-parse HEAD) vue-cli-service serve",
     "build": "VUE_APP_GIT_COMMIT_HASH=$(git rev-parse HEAD) vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "deploy": "NODE_ENV=production gh-pages -d dist"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -27,7 +26,6 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
-    "gh-pages": "^2.2.0",
     "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
